Added changes for initial setup

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -12,41 +12,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-environment: local
-
-local {
+microservice {
   services {
-    host: "http://localhost"
-    service-name-frontend {
-      port: 1234
-      productionRoute: "/path"
-    }
-  }
-}
-
-dev {
-  services {
-    host: "https://www.development.tax.service.gov.uk"
-    service-name-frontend {
-      productionRoute: "/path"
-    }
-  }
-}
-
-qa {
-  services {
-    host: "https://www.qa.tax.service.gov.uk"
-    service-name-frontend {
-      productionRoute: "/path"
-    }
-  }
-}
-
-staging {
-  services {
-    host: "https://www.staging.tax.service.gov.uk"
-    service-name-frontend {
-      productionRoute: "/path"
+    local {
+      protocol = http
+      host = localhost
+      port = 9900
     }
   }
 }
