2 positive scenarios to retrieve liabilities with valid NINO

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -12,12 +12,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-microservice {
+environment: local
+
+local {
   services {
-    local {
-      protocol = http
-      host = localhost
-      port = 9900
+    host: "http://localhost"
+    sa-sandpit {
+      port: 9000
+      productionRoute: "/liability/nino"
     }
   }
 }
+
