1. Added negative scenarios 2. Authorization Toggle implemented

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -19,7 +19,7 @@ local {
     host: "http://localhost"
     sa-sandpit {
       port: 9000
-      productionRoute: "/liability/nino"
+      path: "/liability/nino"
     }
   }
 }
