updated the path at application conf file and array name updated at BaseHelper

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -19,7 +19,7 @@ local {
     host: "http://localhost"
     sa-sandpit {
       port: 9000
-      path: "/liability/nino"
+      path: "/nino"
     }
   }
 }
